WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92915
[chromium] Fix lost context handling on hud layer
https://bugs.webkit.org/show_bug.cgi?id=92915
Summary
[chromium] Fix lost context handling on hud layer
Antoine Labour
Reported
2012-08-01 15:25:49 PDT
[chromium] Fix lost context handling on hud layer
Attachments
Patch
(4.50 KB, patch)
2012-08-01 15:28 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Patch
(4.53 KB, patch)
2012-08-01 15:32 PDT
,
Antoine Labour
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antoine Labour
Comment 1
2012-08-01 15:28:17 PDT
Created
attachment 155901
[details]
Patch
Antoine Labour
Comment 2
2012-08-01 15:29:55 PDT
See
http://code.google.com/p/chromium/issues/detail?id=140092
for crash.
WebKit Review Bot
Comment 3
2012-08-01 15:30:51 PDT
Attachment 155901
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebKit/chromium/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Source/WebKit/chromium/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebKit/chromium/ChangeLog:12: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] Source/WebCore/ChangeLog:12: Line contains tab character. [whitespace/tab] [5] Total errors found: 6 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antoine Labour
Comment 4
2012-08-01 15:32:31 PDT
Created
attachment 155904
[details]
Patch
Adrienne Walker
Comment 5
2012-08-01 15:35:00 PDT
Comment on
attachment 155904
[details]
Patch R=me. Thanks for fixing this, and even more thanks for the test.
WebKit Review Bot
Comment 6
2012-08-01 16:49:01 PDT
Comment on
attachment 155904
[details]
Patch Clearing flags on attachment: 155904 Committed
r124385
: <
http://trac.webkit.org/changeset/124385
>
WebKit Review Bot
Comment 7
2012-08-01 16:49:04 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug