[chromium] Fix lost context handling on hud layer https://bugs.webkit.org/show_bug.cgi?id=92915

Reviewed by Adrienne Walker.

On lost context we need to release CCScopedTextures, otherwise later on
we will try to re-allocate it using a stale CCResourceProvider.

Test CCLayerTreeHostImplTest.dontUseOldResourcesAfterLostContext
extended.

Source/WebCore:

* platform/graphics/chromium/cc/CCHeadsUpDisplayLayerImpl.cpp:
(WebCore::CCHeadsUpDisplayLayerImpl::didLoseContext):
* platform/graphics/chromium/cc/CCHeadsUpDisplayLayerImpl.h:

Source/WebKit/chromium:

* tests/CCLayerTreeHostImplTest.cpp:


Canonical link: https://commits.webkit.org/110756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124385 268f45cc-cd09-0410-ab3c-d52691b4dbfc